# django-template

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  README.md-tpl  api  cookiecutter.json  debug_hook.py  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: sync_dependencies.py
.github/workflows/: copilot-setup-steps.yml  openhands-resolver.yml  python-app.yml  sync-dependencies.yml  test-generated-project.yml  tests.yml  trigger-child-projects.yml
contrib/: env-sample
hooks/: post_gen_project.py
project_name/: asgi.py-tpl  settings.py-tpl  urls.py-tpl
project_name/core/: admin.py-tpl  apps.py-tpl  models.py
test_project/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
test_project/.github/workflows/: python-app.yml
test_project/contrib/: env-sample  secret_gen.py
test_project/test_project/: asgi.py  settings.py  urls.py
test_project/test_project/core/: api.py  apps.py
test_project/test_project/core/templates/: base.html  index.html
test_project/test_project/core/tests/: test_api.py  test_view_index.py
test_project/test_project/users/: apps.py
tests/: test_bake_project.py  test_copilot_instructions.py  test_cruft_workflow.py  test_css.py  test_database.py  test_deploy.py  test_github_workflows.py  test_html.py  test_logging.py  test_migration_linter.py  test_pytest_deadfixtures.py  test_sentry.py  test_staticfiles.py
{{cookiecutter.project_slug}}/: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  README.md-tpl  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  {{".gitignore"}}
{{cookiecutter.project_slug}}/.github/workflows/: cruft-update.yml  python-app.yml  template-update.yml
{{cookiecutter.project_slug}}/contrib/: env-sample
{{cookiecutter.project_slug}}/project_name/: asgi.py-tpl  urls.py-tpl  wsgi.py-tpl
{{cookiecutter.project_slug}}/project_name/core/: apps.py-tpl
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: settings.py  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: admin.py  admin.py-tpl  api.py  apps.py  context_processors.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/templates/: base.html  index.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/tests/: test_crud.py  tests.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/css/: bootstrap.min.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/js/: bootstrap.min.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: admin.py  apps.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/tests/: test_users.py
