[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Lucas Rangel Cezimbra <lucas.cezimbra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cookies = "^0.7.0"
pre-commit = "^3.7.1"


[tool.pytest.ini_options]
testpaths = "tests/"


[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 88
