[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
dj-database-url = "2.2.0"
django = "5.0.6"
django-extensions = "3.2.3"
{%- if cookiecutter.html == 'HTMX' %}
django-htmx = "1.17.2"
{%- endif %}
{%- if cookiecutter.api != 'No' %}
django-ninja = "1.2.0"
{%- endif %}
{%- if cookiecutter.api == 'Django Ninja CRUD' %}
django-ninja-crud = "0.2.0"
{%- endif %}
gunicorn = "23.0.0"
{%- if cookiecutter.database == 'PostgreSQL' %}
psycopg2-binary = "2.9.9"
{%- endif %}
python-decouple = "3.8"
{%- if cookiecutter.use_sentry %}
sentry-sdk = {extras = ["django"], version = "2.7.1"}
{%- endif %}
{%- if cookiecutter.staticfiles %}
whitenoise = {extras = ["brotli"], version = "6.7.0"}
{%- endif %}

[tool.poetry.group.dev.dependencies]
black = "24.1.1"
django-stubs = "4.2.7"
isort = "5.13.2"
model-bakery = "1.19.5"
mypy = "1.8.0"
pre-commit = "3.8.0"
pytest = "8.3.3"
pytest-django = "4.9.0"
pytest-mock = "3.14.0"
ruff = "0.1.14"

{% if cookiecutter.html != "No" %}
[tool.djlint]
blank_line_after_tag="endblock,extends"
blank_line_before_tag="block"
{% endif %}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug }}.settings"
python_files = "tests.py test_*.py *_tests.py"


[tool.ruff]
select = ["E", "F", "I", "S", "TRY"]
ignore = ["E501"]
line-length = 88

[tool.ruff.per-file-ignores]
"manage.py" = ["TRY003"]
"**/tests/**" = ["S101"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "{{ cookiecutter.project_slug }}.settings"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
