[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
dj-database-url = "2.2.0"
django = "5.0.6"
django-extensions = "3.2.3"
{%- if cookiecutter.html == 'HTMX' %}
django-htmx = "1.23.0"
{%- endif %}
django-migration-linter = "5.1.0"
{%- if cookiecutter.api != 'No' %}
django-ninja = "1.2.0"
{%- endif %}
{%- if cookiecutter.api == 'Django Ninja CRUD' %}
django-ninja-crud = "0.2.0"
{%- endif %}
gunicorn = "23.0.0"
{%- if cookiecutter.database == 'PostgreSQL' %}
psycopg = {extras = ["pool"], version = "3.2.9"}
{%- endif %}
python-decouple = "3.8"
{%- if cookiecutter.use_sentry %}
sentry-sdk = {extras = ["django"], version = "2.7.1"}
{%- endif %}
{%- if cookiecutter.staticfiles %}
whitenoise = {extras = ["brotli"], version = "6.7.0"}
{%- endif %}

[tool.poetry.group.dev.dependencies]
model-bakery = "1.19.5"
pre-commit = "3.8.0"
pytest = "8.3.3"
pytest-deadfixtures = "2.2.1"
pytest-django = "4.9.0"
pytest-mock = "3.14.0"

{% if cookiecutter.html != "No" %}
[tool.djlint]
blank_line_after_tag="endblock,extends"
blank_line_before_tag="block"
{% endif %}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug }}.settings"
python_files = "tests.py test_*.py *_tests.py"


[tool.ruff]
select = ["E", "F", "I", "N804", "N805", "S", "TRY"]
ignore = ["E501"]
line-length = 88

[tool.ruff.per-file-ignores]
"manage.py" = ["TRY003"]
"**/tests/**" = ["S101"]
